--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p class="msg">올해는 꼭 모두 지키자!</p>
     <div class="row flex-row wrap">
         <div class="bucket img2-t4 center">목표, 꿈 이루기!<br>그게 뭐든..</div>
-        <div class="bucket img1-t5 center">회화가능한 외국어 1개이상 배우기</div>
+        <div class="bucket img1-t5 center">speaking가능한 외국어 1개이상 배우기</div>
         <div class="bucket img3-t4 center">주3회 이상 운동</div>
         <div class="bucket img4-t4 center">매달 자기회고time 갖기!<br>(시간관리, 자기주도적 삶)</div>
         <div class="bucket img1-t3 center"></div>
